#############################################################################
- NEW FEATURES
   * Deprecated mergedx. Added mergedx2
     - mergedx2 takes the bounding box that a user wishes to calculate a map
       for, as well as a resolution of the output map. An output map meeting
       those specifications is calculated and store.
   * Added pKa tutorial

#############################################################################
BETA PUBLIC RELEASE VERSION 0.5.0       Jan-2007
#############################################################################
 - NEW FEATURES
   * Significantly streamlined the configure/build/install procedure:
     - Most common compiler/library options now detected by default
     - MALOC is now included as a "plugin" to simplify installation and
       compatibility issues
   * Added new APOLAR section to input file and updated documentation -- this
     function renders tools/manip/acc obsolete.
   * Added support for standard one-character chain IDs in PQR files.	
   * Added a new "spl4" charge method (chgm) option to support a quintic 
     B-spline discretization (thanks to Michael Schnieders).
   * Updated psize.py
   * Added a new "spl4" ion-accessibility coefficient model (srfm) option 
     that uses a 7th order polynomial. This option provides the higher
     order continuity necessary for stable force calculations with atomic
     multipole force fields (thanks to Michael Schnieders).
   * Modified the "sdh" boundary condition (bcfl) option to include dipoles
     and quadrupoles.  Well-converged APBS calculations won't change with the 
     dipole and quadrupole molecular moments included in the boundary 
     potential estimate, but calculations run with the boundary close to the 
     solute should give an improved result (thanks to Michael Schnieders). 
   * Updated documentation to reflect new iAPBS features (NAMD support)
   * Added Gemstone example to the tutorial