@@ -7,6 +7,7 @@
        for, as well as a resolution of the output map. An output map meeting
        those specifications is calculated and store.
    * Added pKa tutorial
+   * Added warning about strange grid settings (MGparm)
 
 #############################################################################
 BETA PUBLIC RELEASE VERSION 0.5.0       Jan-2007
